--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,3 @@
-Flask==2.1.2
 Flask-SQLAlchemy==2.5.1
 SQLAlchemy==1.4.32
 Flask-Login==0.5.0
@@ -7,3 +6,6 @@ pytest==7.1.2
 pytest-flask==1.2.0
 pymysql==1.0.2
 python-dotenv==0.20.0
+Flask==2.1.3
+Werkzeug==2.0.3
+mysql-connector-python==8.0.29
